CSS: Fix statusbar overlapped by shadow
refs #3815

--- a/modules/monitoring/public/css/module.less
+++ b/modules/monitoring/public/css/module.less
@@ -21,7 +21,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    top: -1.0625em;
+    top: -1.075em;
   }
 
   .services-summary,
